# TIMESAT_GUI

./: .gitignore  README.md  file_list_input.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.ps1  setup_env.sh  tab_run.py  tab_save_load.py  tab_settings.py  ts_full_run.py  ts_functions.py  webTIMESAT.py
.github/workflows/: publish-PyPI.yml
data/: S2H_NDVI_stack_2022-01-01_2024-12-31_testdata.tif
src/timesat_gui/: file_list_input.py  tab_run.py  tab_settings.py  ts_functions.py
templates/: mainapp.html
