[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]  # <-- add hatch-vcs
build-backend = "hatchling.build"

[project]
name = "timesat-gui"
dynamic = ["version"]
description = "Python-based graphical interface and workflow manager for TIMESAT"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "TIMESAT Team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Framework :: Flask",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
]

# --- Direct runtime dependencies only (what your app imports at run) ---
dependencies = [
  "flask>=2.3",
  "psutil>=5.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.31",
  "pillow>=10.0",
  "pyyaml>=6.0.1",
  "timesat>=4.1.7",
]

[tool.hatch.version]
source = "vcs"                                    # <-- tell Hatch to use Git tags

[project.scripts]
timesat-gui = "timesat_gui.app:main"   # `timesat-gui` CLI to launch the server

[tool.hatch.build]
exclude = ["/tests", "/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/timesat_gui"]

# Ensure templates and static are included in the wheel
# [tool.hatch.build.targets.wheel.force-include]
# "src/timesat_gui/templates" = "timesat_gui/templates"
# "src/timesat_gui/static" = "timesat_gui/static"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]